--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1043,6 +1043,11 @@
     "description": "Objects API prefill mappings fieldset title",
     "originalDefault": "Mappings"
   },
+  "Igt0Rc": {
+    "defaultMessage": "Skip ownership check",
+    "description": "Objects API registration: skipOwnershipCheck label",
+    "originalDefault": "Skip ownership check"
+  },
   "IhIqdj": {
     "defaultMessage": "Beslisdefinitie-ID",
     "description": "Decision definition ID label",
@@ -1229,7 +1234,7 @@
     "originalDefault": "Something went wrong while retrieving the available products defined in the selected case. Please check that the services in the selected API group are configured correctly."
   },
   "LeVpdf": {
-    "defaultMessage": "Plugin-insellingen: e-mail",
+    "defaultMessage": "Plugin-instellingen: e-mail",
     "description": "Email registration options modal title",
     "originalDefault": "Plugin configuration: Email"
   },
@@ -1578,6 +1583,11 @@
     "defaultMessage": "Editor openen",
     "description": "Text on button to open design token editor in modal.",
     "originalDefault": "Open editor"
+  },
+  "T2TGaF": {
+    "defaultMessage": "Ownership checks",
+    "description": "Objects API ownership check fieldset title",
+    "originalDefault": "Ownership checks"
   },
   "TB/ku3": {
     "defaultMessage": "Variabele toevoegen",
@@ -2749,6 +2759,11 @@
     "defaultMessage": "Geeft aan hoe niet voltooide inzendingen (door fouten in de afhandeling) worden opgeschoond na de bewaartermijn. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
     "description": "Errored Submissions Removal Method help text",
     "originalDefault": "How errored submissions of this form will be removed after the limit. Leave blank to use value in General Configuration."
+  },
+  "qdV9zh": {
+    "defaultMessage": "If enabled, then no access control on the referenced object is performed. Ensure that it does not contain private data before checking this!",
+    "description": "Objects API registration: skipOwnershipCheck helpText",
+    "originalDefault": "If enabled, then no access control on the referenced object is performed. Ensure that it does not contain private data before checking this!"
   },
   "qo1UbS": {
     "defaultMessage": "Exporteren",
