--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -564,6 +564,11 @@
     "description": "Email registration options 'emailPaymentSubject' label",
     "originalDefault": "Email payment subject"
   },
+  "BHr/3M": {
+    "defaultMessage": "Als een variable geselecteerd is, dan wordt de waarde gebruikt als e-mailadres(sen) van de ontvangers. Je moet nog steeds een vast adres opgeven als terugvaloptie voor het geval er iets fout gaat met de variabele.",
+    "description": "Email registration options 'toEmailsFromVariable' helpText",
+    "originalDefault": "If specified, the recipient email addresses will be taken from the selected variable. You must still specify 'regular' email addresses as a fallback, in case something is wrong with the variable."
+  },
   "BKTOtD": {
     "defaultMessage": "{varCount, plural, =0 {} one {(1 variabele gekoppeld)} other {({varCount} variabelen gekoppeld)} }",
     "description": "Managed Camunda process vars state feedback",
@@ -823,6 +828,11 @@
     "description": "MissingAuthCosignWarning message",
     "originalDefault": "The co-sign component requires at least one authentication plugin to be enabled."
   },
+  "FNT8nq": {
+    "defaultMessage": "Variabele die adres(sen) bevat",
+    "description": "Email registration options 'toEmailsFromVariable' label",
+    "originalDefault": "Variable containing email addresses"
+  },
   "FQ1JZc": {
     "defaultMessage": "Zaaktypecode waarmee de nieuwe zaak aangemaakt wordt.",
     "description": "StUF-ZDS registration options 'zdsZaaktypeCode' helpText",
@@ -1044,7 +1054,7 @@
     "originalDefault": "Mappings"
   },
   "Igt0Rc": {
-    "defaultMessage": "Skip ownership check",
+    "defaultMessage": "Sla eigenaarcontrole over",
     "description": "Objects API registration: skipOwnershipCheck label",
     "originalDefault": "Skip ownership check"
   },
@@ -1585,7 +1595,7 @@
     "originalDefault": "Open editor"
   },
   "T2TGaF": {
-    "defaultMessage": "Ownership checks",
+    "defaultMessage": "Eigenaarcontroles",
     "description": "Objects API ownership check fieldset title",
     "originalDefault": "Ownership checks"
   },
@@ -2555,11 +2565,6 @@
     "description": "\"variable\" operand type",
     "originalDefault": "the variable"
   },
-  "mOh/pF": {
-    "defaultMessage": "The email address described in this variable will be used for the mailing. If a variable is selected, the general registration addresses will be used as fallback option.",
-    "description": "Email registration options 'toEmailsFromVariable' helpText",
-    "originalDefault": "The email address described in this variable will be used for the mailing. If a variable is selected, the general registration addresses will be used as fallback option."
-  },
   "mOjKcm": {
     "defaultMessage": "Stappen en velden",
     "description": "Form design tab title",
@@ -2614,6 +2619,11 @@
     "defaultMessage": "Het registratieresultaat zal een object van dit type zijn.",
     "description": "Objects API registration options 'Objecttype' helpText",
     "originalDefault": "The registration result will be an object from the selected type."
+  },
+  "nhBYT3": {
+    "defaultMessage": "Ontvangers",
+    "description": "Email registration: recipients fieldset title",
+    "originalDefault": "Recipients"
   },
   "nkr7r0": {
     "defaultMessage": "Aantal dagen dat een inzending bewaard blijft voordat deze definitief verwijderd wordt. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
@@ -2761,7 +2771,7 @@
     "originalDefault": "How errored submissions of this form will be removed after the limit. Leave blank to use value in General Configuration."
   },
   "qdV9zh": {
-    "defaultMessage": "If enabled, then no access control on the referenced object is performed. Ensure that it does not contain private data before checking this!",
+    "defaultMessage": "Indien aangevinkt, dan worden geen controles uitgevoerd of de (ingelogde) gebruiker toegang heeft op het gerefereerde object. Valideer dat de objecten geen privacy-gevoelige gegevens bevatten voor je dit aanvinkt!",
     "description": "Objects API registration: skipOwnershipCheck helpText",
     "originalDefault": "If enabled, then no access control on the referenced object is performed. Ensure that it does not contain private data before checking this!"
   },
@@ -2955,11 +2965,6 @@
     "description": "History link button",
     "originalDefault": "History"
   },
-  "uwCD8e": {
-    "defaultMessage": "Using a variable to decide to which email address the submission details will be sent",
-    "description": "Email registration options 'toEmailsFromVariable' label",
-    "originalDefault": "Using a variable to decide to which email address the submission details will be sent"
-  },
   "vAZDY4": {
     "defaultMessage": "Bronpad",
     "description": "Prefill / Objects API: column header for object type property selection",
@@ -2974,6 +2979,11 @@
     "defaultMessage": "Maak een nieuwe formulierdefinitie",
     "description": "Create form definition tile",
     "originalDefault": "Create a new form definition"
+  },
+  "vaO0I+": {
+    "defaultMessage": "E-mailinhoud",
+    "description": "Email registration: content fieldset title",
+    "originalDefault": "Content"
   },
   "viEfGU": {
     "defaultMessage": "De inhoud van bevestigingspagina na het versturen van de inzending. Dit sjabloon mag variabelen bevatten met inzendings-gegevens. Laat dit veld leeg om de standaardinstelling te gebruiken.",
