--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -389,6 +389,11 @@
     "description": "Email registration options 'paymentEmails' label",
     "originalDefault": "The email addresses to which the payment status update will be sent (defaults to general registration addresses)"
   },
+  "7jY1U4": {
+    "defaultMessage": "Fields",
+    "description": "Form definition formio configuration",
+    "originalDefault": "Fields"
+  },
   "833GAg": {
     "defaultMessage": "Input mapping",
     "description": "Input mapping title",
@@ -2414,11 +2419,6 @@
     "description": "Objects API registration options \"Submission report PDF informatieobjecttype\" label",
     "originalDefault": "Submission report PDF informatieobjecttype"
   },
-  "jARYB7": {
-    "defaultMessage": "Form definition",
-    "description": "Form definition module title",
-    "originalDefault": "Form definition"
-  },
   "jLv6k8": {
     "defaultMessage": "DMN variable",
     "description": "Accessible label for DMN variable dropdown",
@@ -2883,6 +2883,11 @@
     "defaultMessage": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?",
     "description": "Objects API registration backend: v2 switch warning message",
     "originalDefault": "Switching to the new registration options will remove the existing JSON templates. You will also not be able to save the form until the variables are correctly mapped. Are you sure you want to continue?"
+  },
+  "t+J++o": {
+    "defaultMessage": "{isReusable, select, true {Reusable step} other {Step}} settings",
+    "description": "Form definition module title",
+    "originalDefault": "{isReusable, select, true {Reusable step} other {Step}} settings"
   },
   "t5fg/K": {
     "defaultMessage": "one or more actions are invalid",
