--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -99,11 +99,6 @@
     "description": "Camunda complex process variables confirm button",
     "originalDefault": "Confirm"
   },
-  "1Hb/pK": {
-    "defaultMessage": "This is used to perform validation to verify that the authenticated user is the owner of the object.",
-    "description": "Objects API registration: authAttributePath helpText",
-    "originalDefault": "This is used to perform validation to verify that the authenticated user is the owner of the object."
-  },
   "1HfdUc": {
     "defaultMessage": "The API group specifies which objects and objecttypes services to use.",
     "description": "Objects API group field help text",
@@ -1769,6 +1764,11 @@
     "description": "Form list 'active' column header",
     "originalDefault": "Active"
   },
+  "X18/UP": {
+    "defaultMessage": "Owner identifier",
+    "description": "Objects API registration: authAttributePath label",
+    "originalDefault": "Owner identifier"
+  },
   "XAKzo5": {
     "defaultMessage": "Authentication automatic login",
     "description": "Auto-login field label",
@@ -2174,6 +2174,11 @@
     "description": "Incomplete Submissions Removal Limit help text",
     "originalDefault": "Amount of days incomplete submissions of this form will remain before being removed. Leave blank to use value in General Configuration."
   },
+  "fB1baI": {
+    "defaultMessage": "The property that gets compared with the identifier (e.g. BSN/KVK) of the authenticated user to verify ownership of the object being updated. This is important to prevent malicious users modifying information of other people than themselves.",
+    "description": "Objects API registration: authAttributePath helpText",
+    "originalDefault": "The property that gets compared with the identifier (e.g. BSN/KVK) of the authenticated user to verify ownership of the object being updated. This is important to prevent malicious users modifying information of other people than themselves."
+  },
   "fLCWjk": {
     "defaultMessage": "Name",
     "description": "Variable table name title",
@@ -2228,6 +2233,11 @@
     "defaultMessage": "Do nothing",
     "description": "Session expiry warning \"do nothing\" button",
     "originalDefault": "Do nothing"
+  },
+  "g1i5ru": {
+    "defaultMessage": "The property that gets compared with the identifier (e.g. BSN/KVK) of the authenticated user. This is important to prevent malicious users looking up private information of other people.",
+    "description": "Objects API prefill: authAttributePath helpText",
+    "originalDefault": "The property that gets compared with the identifier (e.g. BSN/KVK) of the authenticated user. This is important to prevent malicious users looking up private information of other people."
   },
   "gAf9pR": {
     "defaultMessage": "(not configured yet)",
@@ -2553,11 +2563,6 @@
     "defaultMessage": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case.",
     "description": "ZGW APIs registration options 'objecttype' help text",
     "originalDefault": "URL to the object type in the objecttypes API. If provided, an object will be created and a case object relation will be added to the case."
-  },
-  "lu7yMK": {
-    "defaultMessage": "Path to auth attribute (e.g. BSN/KVK) in objects",
-    "description": "Objects API registration: authAttributePath label",
-    "originalDefault": "Path to auth attribute (e.g. BSN/KVK) in objects"
   },
   "m83ECr": {
     "defaultMessage": "Copying the configuration from the registration backend will clear the existing configuration. Are you sure you want to continue?",
