--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1288,6 +1288,11 @@
     "description": "Formio component selection label",
     "originalDefault": "Component"
   },
+  "MIrPon": {
+    "defaultMessage": "Component \"{label}\" uses a prefill that requires one of the \"{requiredAuthAttribute}\" attributes. Please select one or more authentication plugins that provide such an attribute.",
+    "description": "Prefill plugin requires unavailable auth attribute warning",
+    "originalDefault": "Component \"{label}\" uses a prefill that requires one of the \"{requiredAuthAttribute}\" attributes. Please select one or more authentication plugins that provide such an attribute."
+  },
   "MUfBmP": {
     "defaultMessage": "De waarde van de geselecteerde variabele wordt de waarde van de zaakeigenschap.",
     "description": "Column help text for variable to map to property",
@@ -1709,11 +1714,6 @@
     "defaultMessage": "Inhoud",
     "description": "Confirmation page content label",
     "originalDefault": "Page content"
-  },
-  "VQYmOD": {
-    "defaultMessage": "De component \"{label}\" gebruikt een prefill die het \"{requiredAuthAttribute}\"-attribuut nodig heeft. Gebruik een authenticatiemethode die dit attribuut aanbiedt.",
-    "description": "Prefill plugin requires unavailable auth attribute warning",
-    "originalDefault": "Component \"{label}\" uses a prefill that requires the \"{requiredAuthAttribute}\" attribute. Please select an authentication plugin that provides this attribute."
   },
   "VUOOSy": {
     "defaultMessage": "Naam",
