--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -274,6 +274,11 @@
     "description": "Variable source group label for user defined variables",
     "originalDefault": "User defined"
   },
+  "5rj0a+": {
+    "defaultMessage": "Service",
+    "description": "JSON registration options 'serviceSelect' label",
+    "originalDefault": "Service"
+  },
   "5uaKBM": {
     "defaultMessage": "minus",
     "description": "\"-\" operator description",
@@ -544,6 +549,11 @@
     "description": "ZGW APIs registrations options: role type error",
     "originalDefault": "Something went wrong while retrieving the available role types defined in the selected case. Please check that the services in the selected API group are configured correctly."
   },
+  "AkG8Zu": {
+    "defaultMessage": "Plugin configuration: JSON",
+    "description": "JSON registration options modal title",
+    "originalDefault": "Plugin configuration: JSON"
+  },
   "AtBVAV": {
     "defaultMessage": "Confirm",
     "description": "Form definition select confirm button",
@@ -648,6 +658,11 @@
     "defaultMessage": "value",
     "description": "\"literal\" operand type",
     "originalDefault": "value"
+  },
+  "CZ774U": {
+    "defaultMessage": "Which variables to include in the data to be sent",
+    "description": "JSON registration options 'variables' helpText",
+    "originalDefault": "Which variables to include in the data to be sent"
   },
   "CiaAYL": {
     "defaultMessage": "Select the allowed authentication plugins to log in at the start of the form.",
@@ -1044,6 +1059,11 @@
     "description": "Objects API prefill mappings fieldset title",
     "originalDefault": "Mappings"
   },
+  "Ibejpf": {
+    "defaultMessage": "Path relative to the Service API root",
+    "description": "JSON registration options 'path' helpText",
+    "originalDefault": "Path relative to the Service API root"
+  },
   "Igt0Rc": {
     "defaultMessage": "Skip ownership check",
     "description": "Objects API registration: skipOwnershipCheck label",
@@ -1163,6 +1183,11 @@
     "defaultMessage": "Manually defined",
     "description": "JSON editor: \"manual\" variable source label",
     "originalDefault": "Manually defined"
+  },
+  "Kl9yvd": {
+    "defaultMessage": "Path",
+    "description": "JSON registration options 'path' label",
+    "originalDefault": "Path"
   },
   "KtVIGz": {
     "defaultMessage": "Document types (legacy)",
@@ -1393,6 +1418,11 @@
     "defaultMessage": "Advanced",
     "description": "Advanced logic type",
     "originalDefault": "Advanced"
+  },
+  "OpkUgV": {
+    "defaultMessage": "Whether to include this variable in the data to be sent.",
+    "description": "'Include variable' checkbox help text",
+    "originalDefault": "Whether to include this variable in the data to be sent."
   },
   "Orf0vr": {
     "defaultMessage": "Update",
@@ -1813,6 +1843,11 @@
     "defaultMessage": "House number Schema target",
     "description": "Objects registration variable mapping, addressNL component: 'options.houseNumber schema target' label",
     "originalDefault": "House number Schema target"
+  },
+  "XyDeaD": {
+    "defaultMessage": "Variables",
+    "description": "JSON registration options 'variables' label",
+    "originalDefault": "Variables"
   },
   "YDjQH8": {
     "defaultMessage": "Something went wrong while retrieving the available catalogues and/or document types.",
@@ -2634,6 +2669,11 @@
     "description": "Objects API registrations options: object type version select error",
     "originalDefault": "Something went wrong while retrieving the available object type versions."
   },
+  "nZZkHx": {
+    "defaultMessage": "Include variable",
+    "description": "'Include variable' checkbox label",
+    "originalDefault": "Include variable"
+  },
   "neCqv9": {
     "defaultMessage": "The registration result will be an object from the selected type.",
     "description": "Objects API registration options 'Objecttype' helpText",
@@ -2773,6 +2813,11 @@
     "defaultMessage": "This template is evaluated with the submission data when the payment is received. The resulting JSON is sent to the objects API to update (the payment fields of) the earlier created object.",
     "description": "Legacy objects API registration options: 'paymentStatusUpdateJson' helpText",
     "originalDefault": "This template is evaluated with the submission data when the payment is received. The resulting JSON is sent to the objects API to update (the payment fields of) the earlier created object."
+  },
+  "qPiUic": {
+    "defaultMessage": "Which service to send the data to",
+    "description": "JSON registration options 'serviceSelect' helpText",
+    "originalDefault": "Which service to send the data to"
   },
   "qUYLVg": {
     "defaultMessage": "Product & payment",
