--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -2027,6 +2027,11 @@
     "description": "Changing user variable data type and transforming initial value confirmation message",
     "originalDefault": "Changing the data type requires the initial value to be changed. This will reset the initial value back to the empty value. Are you sure that you want to do this?"
   },
+  "ag/AZx": {
+    "defaultMessage": "De DMN-instellingen zijn niet geldig.",
+    "description": "DMN evaluation configuration errors message",
+    "originalDefault": "There are errors in the DMN configuration."
+  },
   "auZOcD": {
     "defaultMessage": "Mappingexpressie",
     "description": "Service fetch configuration modal form mapping expression field label",
