--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -251,6 +251,11 @@
     "description": "Manage process vars component help text",
     "originalDefault": "The value of the selected field will be the process variable value."
   },
+  "5EOSwM": {
+    "defaultMessage": "Additional",
+    "description": "JSON registration options 'additionalMetadataVariables' label",
+    "originalDefault": "Additional"
+  },
   "5JNnFB": {
     "defaultMessage": "Let op! Teruggaan naar het oude configuratieformaat verwijdert de ingestelde variabelekoppelingen. Ben je zeker dat je wil teruggaan?",
     "description": "Objects API registration backend: v1 switch warning message",
@@ -604,6 +609,11 @@
     "description": "data type boolean",
     "originalDefault": "Boolean"
   },
+  "BiKRJT": {
+    "defaultMessage": "Key",
+    "description": "Fixed metadata table name key title",
+    "originalDefault": "Key"
+  },
   "Bin/vM": {
     "defaultMessage": "Opslaan",
     "description": "Text on button in modal to save design token values",
@@ -665,11 +675,6 @@
     "description": "\"literal\" operand type",
     "originalDefault": "value"
   },
-  "CZ774U": {
-    "defaultMessage": "Which variables to include in the data to be sent",
-    "description": "JSON registration options 'variables' helpText",
-    "originalDefault": "Which variables to include in the data to be sent"
-  },
   "CiaAYL": {
     "defaultMessage": "Selecteer de toegestane authenticatie-plugins om in te loggen aan het begin van het formulier.",
     "description": "Auth plugin field help text",
@@ -684,6 +689,11 @@
     "defaultMessage": "Inzenden toegestaan",
     "description": "Form submissionAllowed field label",
     "originalDefault": "Submission allowed"
+  },
+  "Cz+O0n": {
+    "defaultMessage": "Source",
+    "description": "Fixed metadata table source title",
+    "originalDefault": "Source"
   },
   "D6NRQk": {
     "defaultMessage": "{count, plural, one {1 logicaregel met problemen.} other {{count, number} logicaregels met problemen.}}",
@@ -1068,11 +1078,6 @@
     "description": "Objects API prefill mappings fieldset title",
     "originalDefault": "Mappings"
   },
-  "Ibejpf": {
-    "defaultMessage": "Path relative to the Service API root",
-    "description": "JSON registration options 'path' helpText",
-    "originalDefault": "Path relative to the Service API root"
-  },
   "Igt0Rc": {
     "defaultMessage": "Sla eigenaarcontrole over",
     "description": "Objects API registration: skipOwnershipCheck label",
@@ -1148,6 +1153,11 @@
     "description": "Minimal LoA override help text",
     "originalDefault": "Override the minimum Level of Assurance. This is not supported by all authentication plugins."
   },
+  "JfgATN": {
+    "defaultMessage": "Additional variables to include.",
+    "description": "JSON registration options 'additionalMetadataVariables' helpText",
+    "originalDefault": "Additional variables to include."
+  },
   "JhdlEg": {
     "defaultMessage": "Er zijn mede-ondertekencomponenten gevonden binnen een herhalende groep. Dit is niet ondersteund.",
     "description": "Cosign components in repeating group warning message",
@@ -1182,6 +1192,11 @@
     "defaultMessage": "Inhoud",
     "description": "Confirmation Email Content label",
     "originalDefault": "Content"
+  },
+  "KMTsJc": {
+    "defaultMessage": "Static",
+    "description": "'Static' source label for fixed metadata variables table",
+    "originalDefault": "Static"
   },
   "KYTAJZ": {
     "defaultMessage": "(actief binnen elke stap)",
@@ -1414,6 +1429,11 @@
     "defaultMessage": "Uw sessie vervalt {delta}. Verleng uw sessie indien u wenst door te gaan.",
     "description": "Session expiry warning (in modal)",
     "originalDefault": "Your session is about to expire {delta}. Extend your session if you wish to continue."
+  },
+  "Od+jm6": {
+    "defaultMessage": "Values:",
+    "description": "Label indicating the 'values' part of the data",
+    "originalDefault": "Values:"
   },
   "Oi+DV0": {
     "defaultMessage": "<code>{attr}</code> uit <code>{plugin}</code> (van de {role})",
@@ -1812,6 +1832,11 @@
     "description": "Form list 'active' column header",
     "originalDefault": "Active"
   },
+  "X+NeMd": {
+    "defaultMessage": "Include variable in metadata",
+    "description": "'Include variable in metadata' checkbox label",
+    "originalDefault": "Include variable in metadata"
+  },
   "X18/UP": {
     "defaultMessage": "Identificatie-attribuut",
     "description": "Objects API registration: authAttributePath label",
@@ -1861,6 +1886,11 @@
     "defaultMessage": "Bestemmingspad huisnummer",
     "description": "Objects registration variable mapping, addressNL component: 'options.houseNumber schema target' label",
     "originalDefault": "House number Schema target"
+  },
+  "Xpw7Gk": {
+    "defaultMessage": "Whether to include this variable in the metadata to be sent.",
+    "description": "'Include variable in metadata' checkbox help text",
+    "originalDefault": "Whether to include this variable in the metadata to be sent."
   },
   "XyDeaD": {
     "defaultMessage": "Variables",
@@ -2032,6 +2062,11 @@
     "description": "Objects API registration options 'Objecttype' label",
     "isTranslated": true,
     "originalDefault": "Objecttype"
+  },
+  "bmUuAH": {
+    "defaultMessage": "Fixed",
+    "description": "JSON registration options 'fixedMetadataVariables' label",
+    "originalDefault": "Fixed"
   },
   "bmlODS": {
     "defaultMessage": "Bronhouder",
@@ -2404,6 +2439,11 @@
     "description": "User defined variable deletion confirm message",
     "originalDefault": "Are you sure you want to delete this variable?"
   },
+  "hfeO2r": {
+    "defaultMessage": "Registration",
+    "description": "'Registration' source label for fixed metadata variables table",
+    "originalDefault": "Registration"
+  },
   "hhoWxC": {
     "defaultMessage": "Als je dit leeg laat, dan wordt de nieuwste versie gebruikt.",
     "description": "DMN action: definition version field help text",
@@ -2439,6 +2479,11 @@
     "defaultMessage": "Informatieobjecttype bijlagen",
     "description": "Objects API registration options \"Attachment informatieobjecttype\" label",
     "originalDefault": "Attachment informatieobjecttype"
+  },
+  "iQblZd": {
+    "defaultMessage": "Variables that are already included.",
+    "description": "JSON registration options 'fixedMetadataVariables' helpText",
+    "originalDefault": "Variables that are already included."
   },
   "iXJKU7": {
     "defaultMessage": "Component",
@@ -2660,6 +2705,11 @@
     "description": "JSON variable type \"Form field\" representation",
     "originalDefault": "Form field"
   },
+  "mfD7J5": {
+    "defaultMessage": "Name",
+    "description": "Fixed metadata table name title",
+    "originalDefault": "Name"
+  },
   "myvtu0": {
     "defaultMessage": "Beheer procesvariabelen",
     "description": "Open manage camunda process vars modal button",
@@ -2669,6 +2719,11 @@
     "defaultMessage": "Versie",
     "description": "Camunda 'process definition version' label",
     "originalDefault": "Version"
+  },
+  "nEg4dr": {
+    "defaultMessage": "Metadata:",
+    "description": "Label indicating the 'metadata' part of the data",
+    "originalDefault": "Metadata:"
   },
   "nFXYHB": {
     "defaultMessage": "Datum en tijdstip waarop het formulier gedeactiveerd moet worden.",
@@ -2755,6 +2810,11 @@
     "description": "Objects API prefill options 'Objecttype' helpText",
     "originalDefault": "The prefill values will be taken from an object of the selected type."
   },
+  "ow5LZk": {
+    "defaultMessage": "Variables to include in the data to be sent.",
+    "description": "JSON registration options 'variables' helpText",
+    "originalDefault": "Variables to include in the data to be sent."
+  },
   "oxYXJX": {
     "defaultMessage": "Geeft aan hoe voltooide inzendingen worden opgeschoond na de bewaartermijn. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
     "description": "Successful Submissions Removal Method help text",
@@ -2834,11 +2894,6 @@
     "defaultMessage": "Dit sjabloon wordt geëvalueerd met de inzendingsgegevens wanneer de betaling ontvangen is. De resulterende JSON wordt naar de Objecten-API gestuurd om (de betaalattributen van) het eerder aangemaakte object bij te werken.",
     "description": "Legacy objects API registration options: 'paymentStatusUpdateJson' helpText",
     "originalDefault": "This template is evaluated with the submission data when the payment is received. The resulting JSON is sent to the objects API to update (the payment fields of) the earlier created object."
-  },
-  "qPiUic": {
-    "defaultMessage": "Which service to send the data to",
-    "description": "JSON registration options 'serviceSelect' helpText",
-    "originalDefault": "Which service to send the data to"
   },
   "qUYLVg": {
     "defaultMessage": "Product en betaling",
@@ -2935,6 +2990,11 @@
     "description": "DMN evaluation not configured yet message",
     "originalDefault": "(not configured yet)"
   },
+  "sAfROS": {
+    "defaultMessage": "Metadata variables",
+    "description": "Metadata variables fieldset title",
+    "originalDefault": "Metadata variables"
+  },
   "sCkGL9": {
     "defaultMessage": "ongeldige uitvoerparameters",
     "description": "Warning message: DMN output mapping problems detected",
@@ -2949,6 +3009,11 @@
     "defaultMessage": "Vink aan om gebruikersbestanden als bijlage aan de registratiemail toe te voegen. Als een waarde gezet is, dan heeft deze hogere prioriteit dan de globale configuratie. Formulierbeheerders moeten ervoor zorgen dat de totale maximale bestandsgrootte onder de maximale e-mailbestandsgrootte blijft.",
     "description": "Email registration options 'attachFilesToEmail' helpText",
     "originalDefault": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit."
+  },
+  "sokfvf": {
+    "defaultMessage": "The service to send the data to.",
+    "description": "JSON registration options 'serviceSelect' helpText",
+    "originalDefault": "The service to send the data to."
   },
   "sptpzv": {
     "defaultMessage": "Let op! Migreren naar het nieuwe configuratieformaat maakt de bestaande JSON-sjablonen leeg. Daarnaast kan je het formulier pas opslaan als alle verplichte variabelen goed gekoppeld zijn. Ben je zeker dat je wil migreren?",
@@ -3034,6 +3099,11 @@
     "defaultMessage": "Aantal dagen dat een voltooide inzending bewaard blijft. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
     "description": "Successful Submissions Removal Limit help text",
     "originalDefault": "Amount of days successful submissions of this form will remain before being removed. Leave blank to use value in General Configuration."
+  },
+  "uUf7cu": {
+    "defaultMessage": "Path relative to the Service API root.",
+    "description": "JSON registration options 'path' helpText",
+    "originalDefault": "Path relative to the Service API root."
   },
   "uiliGe": {
     "defaultMessage": "De logicaregels die u hier definieert worden uitgevoerd in de volgorde zoals hier weergegeven. U vindt meer informatie in de <docs>handleiding</docs>.",
